--- a/Sentiment Analysis.ipynb
+++ b/Sentiment Analysis.ipynb
@@ -719,10 +719,10 @@
     }
    ],
    "source": [
-    "test_sentence1 = \"I enjoyed my journey on this flight.\"\n",
+    "test_sentence1 = \"I enjoyed my journey on this flight, the food at Banglore airport was also very delicious\"\n",
     "predict_sentiment(test_sentence1)\n",
     "\n",
-    "test_sentence2 = \"This is the worst flight experience of my life!\"\n",
+    "test_sentence2 = \"This is the worst flight experience of my life as the Spice jet flight attendants were very rude!\"\n",
     "predict_sentiment(test_sentence2)"
    ]
   },
