--- a/Sentiment Analysis.ipynb
+++ b/Sentiment Analysis.ipynb
@@ -24,7 +24,7 @@
     "from tensorflow.keras.layers import LSTM,Dense, Dropout, SpatialDropout1D\n",
     "from tensorflow.keras.layers import Embedding\n",
     "\n",
-    "df = pd.read_csv(\"./Tweets.csv\")ra"
+    "df = pd.read_csv(\"Airline_reviews.csv\")ra"
    ]
   },
   {
